platform-charts/admin-webapps/templates/network/admin-wwww-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wwww
spec:
  type: ClusterIP
  selector:
    app: wwww
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
