platform-charts/admin-webapps/templates/network/admin-nginx-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
spec:
  parentRefs:
    - name: default-cilium-gateway
      sectionName: https
      namespace: cilium
  hostnames:
    - "aaa.192.168.100.243.sslip.io.192.168.100.243.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx
          port: 80
